--- a/Loja/Loja/Views/Products/Create.cshtml
+++ b/Loja/Loja/Views/Products/Create.cshtml
@@ -33,6 +33,11 @@
                 <span asp-validation-for="price" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="foto" class="control-label"></label>
+                <input asp-for="foto" class="form-control" />
+                <span asp-validation-for="foto" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
