--- a/Loja/Loja/Views/Products/Delete.cshtml
+++ b/Loja/Loja/Views/Products/Delete.cshtml
@@ -35,6 +35,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.price)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.foto)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.foto)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
